--- a/mobile/schoolAbout.html
+++ b/mobile/schoolAbout.html
@@ -11,11 +11,24 @@
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- Google Font -->
-    <link rel="stylesheet" href="../css/google.fonts.css">
-    <!-- jQuery 3 -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <!-- Ionicons -->
+    <link rel="stylesheet" href="../bower_components/Ionicons/css/ionicons.min.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
+    <!-- AdminLTE Skins. Choose a skin from the css/skins
+       folder instead of downloading all of them to reduce the load. -->
+    <link rel="stylesheet" href="../dist/css/skins/_all-skins.min.css">
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="../bower_components/morris.js/morris.css">
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="../bower_components/jvectormap/jquery-jvectormap.css">
+    <!-- Date Picker -->
+    <link rel="stylesheet" href="../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="../plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker.css">
 
     <!-- Bootstrap 3.3.7 -->
     <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -33,19 +46,122 @@
 </head>
 
 <body>
-    <div id="main">
-        <h1>About Dynamiko School : Todo</h1>
+    <div id="main" style="display: flex; flex-direction: column; margin: 10px;">
+        <div class="box box-primary">
+            <div class="box-body box-profile">
+                <h3 class="profile-username text-center">Welcome Nina Mcintire</h3>
+
+                <p class="text-muted text-center">Software Engineer</p>
+            </div>
+        </div>
+
+        <div class="box box-success">
+            <div class="box-header with-border">
+                <h3 class="box-title">My Modules</h3>
+            </div>
+            <div class="box-body">
+                <div style="display: flex; flex-wrap: wrap;" id="moduleList">
+                    <div style="flex: 45%">
+                        <!-- small box -->
+                        <div class="small-box bg-aqua" style="margin: 10px;">
+                            <div class="inner">
+                                <h3>150</h3>
+
+                                <p>New Orders</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-bag"></i>
+                            </div>
+                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div style="flex: 45%">
+                        <!-- small box -->
+                        <div class="small-box bg-green" style="margin: 10px;">
+                            <div class="inner">
+                                <h3>53<sup style="font-size: 20px">%</sup></h3>
+
+                                <p>Bounce Rate</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-stats-bars"></i>
+                            </div>
+                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div style="flex: 45%">
+                        <!-- small box -->
+                        <div class="small-box bg-yellow" style="margin: 10px;">
+                            <div class="inner">
+                                <h3>44</h3>
+
+                                <p>User Registrations</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-person-add"></i>
+                            </div>
+                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                    <div style="flex: 45%">
+                        <!-- small box -->
+                        <div class="small-box bg-red" style="margin: 10px;">
+                            <div class="inner">
+                                <h3>65</h3>
+
+                                <p>Unique Visitors</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-pie-graph"></i>
+                            </div>
+                            <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                    <!-- ./col -->
+                </div>
+            </div>
+        </div>
+        <div id="announcementList">
+            <div class="box box-solid">
+                <div class="box-header with-border">
+                    <i class="fa fa-text-width"></i>
+
+                    <h3 class="box-title">Announcement</h3>
+                </div>
+                <div class="box-body">
+                    <blockquote>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                        <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+                    </blockquote>
+                </div>
+            </div>
+
+            <div class="box box-solid">
+                <div class="box-header with-border">
+                    <i class="fa fa-text-width"></i>
+
+                    <h3 class="box-title">Announcement</h3>
+                </div>
+                <!-- /.box-header -->
+                <div class="box-body clearfix">
+                    <blockquote class="pull-right">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                        <small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+                    </blockquote>
+                </div>
+                <!-- /.box-body -->
+            </div>
+        </div>
     </div>
-    <h1 id="mobileResponse">Sample</h1>
-    <div id="announcementList"></div>
-    <!-- ./wrapper -->
 
     <link rel="stylesheet" href="css/mobile.css">
     <script src="js/schoolAbout.js"></script>
 
     <script>
         $(function () {
-            sessionStorage.clear();
             schoolAbout.init();
         });
     </script>
