In Progress - Mobile Testing Thru Web

--- a/mobile/android/version/1/schoolHome.html
+++ b/mobile/android/version/1/schoolHome.html
@@ -8,43 +8,51 @@
     <title>Dynamiko</title>
 
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../../bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../../../bower_components/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="../bower_components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="../../../../bower_components/Ionicons/css/ionicons.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="../dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="../../../../dist/css/AdminLTE.min.css">
     <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
-    <link rel="stylesheet" href="../dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="../../../../dist/css/skins/_all-skins.min.css">
     <!-- Morris chart -->
-    <link rel="stylesheet" href="../bower_components/morris.js/morris.css">
+    <link rel="stylesheet" href="../../../../bower_components/morris.js/morris.css">
     <!-- jvectormap -->
-    <link rel="stylesheet" href="../bower_components/jvectormap/jquery-jvectormap.css">
+    <link rel="stylesheet" href="../../../../bower_components/jvectormap/jquery-jvectormap.css">
     <!-- Date Picker -->
-    <link rel="stylesheet" href="../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet"
+        href="../../../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="../../../../bower_components/bootstrap-daterangepicker/daterangepicker.css">
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" href="../plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
-    <link rel="stylesheet" href="../bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="../../../../plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="../../../../bower_components/bootstrap-daterangepicker/daterangepicker.css">
 
 
     <!-- jQuery 3 -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="../../../../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../../../../bower_components/jquery-ui/jquery-ui.min.js"></script>
     <!-- Bootstrap 3.3.7 -->
-    <script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="../bower_components/moment/min/moment.min.js"></script>
-    <script src="../bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="../../../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="../../../../bower_components/moment/min/moment.min.js"></script>
+    <script src="../../../../bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
     <!-- datepicker -->
-    <script src="../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="../../../../bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 
-    <script src="../js/mainObj.js"></script>
-    <script src="../js/ajaxCaller.js"></script>
-    <script src="../js/utils.js"></script>
-    <script src="js/mobileConfig.js"></script>
+    <script src="../../../../js/mainObj.js"></script>
+    <script src="../../../../js/ajaxCaller.js"></script>
+    <script src="../../../../js/utils.js"></script>
+    <script src="../../../js/mobileConfig.js"></script>
+
+    <script src="../../../../js/config.js"></script>
+    <script src="../../../../js/storage.js"></script>
+    <script src="../../../../js/login.js"></script>
+    <script src="../../../../js/alertConfirm.js"></script>
+
+    <script src="../../../js/abstractMobile.js"></script>
 </head>
 
 <body>
@@ -159,8 +167,8 @@
         </div>
     </div>
 
-    <link rel="stylesheet" href="css/mobile.css">
-    <script src="js/schoolHome.js"></script>
+    <link rel="stylesheet" href="../../../css/mobile.css">
+    <script src="../../../js/schoolHome.js"></script>
 
     <script>
         $(function () {
