--- a/mobileTesting.html
+++ b/mobileTesting.html
@@ -124,6 +124,8 @@
           </ul>
           <li class="header">MAIN NAVIGATION</li>
           <ul class="sidebar-menu mysidemenu" data-widget="tree" style="max-height:700px; overflow-y:auto;">
+            <li><a href="#" class="leftMenuItem mobileUI" data="schoolHome" user=""><i class="null"></i> <span>School
+                  Home [Not Logged In]</span></a></li>
             <li><a href="#" class="leftMenuItem mobileUI" data="schoolHome" user="faculty1@test.com"><i
                   class="null"></i> <span>School
                   Home [Faculty 1]</span></a></li>
