--- a/login.html
+++ b/login.html
@@ -78,6 +78,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- iCheck -->
     <script src="plugins/iCheck/icheck.min.js"></script>
+    <script src="js/mainObj.js"></script>
     <script src="js/config.js"></script>
     <script src="js/login.js"></script>
 
@@ -85,6 +86,8 @@
     <link rel="stylesheet" href="css/jquery-confirm.min.css">
     <script src="js/others/jquery-confirm.min.js"></script>
     <script src="js/alertConfirm.js"></script>
+    <script src="js/ajaxCaller.js"></script>
+    <script src="js/utils.js"></script>
 
     <script src="js/constants.js"></script>
     <script src="js/storage.js"></script>
@@ -102,7 +105,7 @@
                 login();
             }
         });
-        $("#btnSubmit").click(function() {
+        $("#btnSubmit").click(function () {
             login();
         });
         function login() {
