--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
     <script src="js/storage.js"></script>
     <script>
         $(function () {
-            sessionStorage.clear();
+            localStorage.clear();
             $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
