--- a/home.html
+++ b/home.html
@@ -510,6 +510,7 @@
   <script src="js/modules/ReportUI.js"></script>
   <script src="js/modules/ConferenceUI.js"></script>
   <script src="js/modules/AllNotificationUI.js"></script>
+  <script src="js/modules/FacultyDashboardUI.js"></script>
 
   <script src="js/meetingui/GenericMeetingUI.js"></script>
   <script src="js/meetingui/FacultyMeetingUI.js"></script>
