--- a/displaytabs/FacultyScheduleUI-MainTemplate.html
+++ b/displaytabs/FacultyScheduleUI-MainTemplate.html
@@ -24,7 +24,8 @@
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="FacultyScheduleUI" code=""><b>Virtual Class</b></a>
+                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="FacultyScheduleUI"
+                  code=""><b>Virtual Class</b></a>
               </div>
             </div>
 
@@ -70,8 +71,7 @@
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="announcements">
-                  <div id="announcementList" style="display: flex; flex-wrap: wrap;">
-
+                  <div class="box-body" id="announcementsContent">
                   </div>
                 </div>
                 <!-- /.tab-pane -->
