--- a/home.html
+++ b/home.html
@@ -40,6 +40,7 @@
   <link rel="stylesheet" href="css/autocomplete.css">
   <link rel="stylesheet" href="css/slim-scroll.css">
   <link rel="stylesheet" href="css/responsive.dataTables.css">
+  <link rel="stylesheet" href="css/wordpress-hook.css">
 
 </head>
 
