--- a/displaytabs/FacultyDashboardUI-MainTemplate.html
+++ b/displaytabs/FacultyDashboardUI-MainTemplate.html
@@ -34,7 +34,8 @@
         <div class="box-header with-border">
           <h3 class="box-title">Announcements</h3>
         </div>
-        <div class="box-body" id="announcementsContent">
+        <div class="box-body" style="margin:0px;padding:0px;overflow:hidden">
+          <iframe height="100%" width="100%" frameborder="0" src="#" id="announcementContent" scrolling="no"></iframe>
         </div>
         <div class="box-footer">
         </div>
