--- a/displaytabs/FacultyScheduleUI-MainTemplate.html
+++ b/displaytabs/FacultyScheduleUI-MainTemplate.html
@@ -71,7 +71,9 @@
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="announcements">
-                  <div class="box-body" id="announcementsContent">
+                  <div class="box-body">
+                    <iframe height="100%" width="100%" frameborder="0" src="#" id="announcementContent"
+                      scrolling="no"></iframe>
                   </div>
                 </div>
                 <!-- /.tab-pane -->
