--- a/home.html
+++ b/home.html
@@ -421,6 +421,9 @@
   <script src="js/quick-searcher.js"></script>
   <script src="js/dynamiko-cache.js"></script>
   <script src="js/sockjs.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+    integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
+
 
 
   <script src="js/widgets/tasks-widget.js"></script>
@@ -438,6 +441,7 @@
   <script src="js/mainJS.js"></script>
   <script src="js/storage.js"></script>
 
+  <!--Using SockJS and Java-->
   <script src="js/meetingroom/p2p.js"></script>
   <script src="js/meetingroom/roomSignal.js"></script>
 
@@ -448,6 +452,9 @@
   <script src="js/meetingroom/meetingLoader.js"></script>
   <script src="js/meetingroom/dataChunkSender.js"></script>
   <script src="js/meetingroom/chatMessageWriter.js"></script>
+
+  <!--Using SocketIO-->
+  <script src="js/socketio-meetingroom/socketioMeetingRoom.js"></script>
 
   <script src="js/meetingroom/quickCall.js"></script>
 
