--- a/autologin.html
+++ b/autologin.html
@@ -63,7 +63,7 @@
     <script src="js/utils.js"></script>
     <script>
         $(function () {
-            localStorage.clear();
+            storage.clear();
             $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
