--- a/home.html
+++ b/home.html
@@ -342,7 +342,7 @@
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
   <!--<script src="dist/js/pages/dashboard2.js"></script>-->
   <!-- AdminLTE for demo purposes -->
-  <script src="dist/js/demo.js"></script>
+  <!-- <script src="dist/js/demo.js"></script> -->
 
   <script src="js/others/jquery-migrate-3.0.0.js"></script>
   <link rel="stylesheet" href="css/jquery-confirm.min.css">
