--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <script src="js/constants.js"></script>
     <script>
         $(function () {
-            localStorage.clear();
+            storage.clear();
             $('input').iCheck({
                 checkboxClass: 'icheckbox_square-blue',
                 radioClass: 'iradio_square-blue',
