--- a/displaytabs/FacultyScheduleUI-MainTemplate.html
+++ b/displaytabs/FacultyScheduleUI-MainTemplate.html
@@ -24,8 +24,8 @@
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="FacultyScheduleUI"
-                  code=""><b>Virtual Class</b></a>
+                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="SchoolUI" code=""><b>Virtual
+                    Class</b></a>
               </div>
             </div>
 
