--- a/displaytabs/StudentScheduleUI-MainTemplate.html
+++ b/displaytabs/StudentScheduleUI-MainTemplate.html
@@ -24,7 +24,8 @@
                   </li>
                 </ul>
 
-                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="StudentScheduleUI" code=""><b>Virtual Class</b></a>
+                <a href="#" class="btn btn-primary btn-block btnJoinVirtualRoom" module="SchoolUI" code=""><b>Virtual
+                    Class</b></a>
               </div>
             </div>
 
@@ -70,8 +71,9 @@
                 </div>
                 <!-- /.tab-pane -->
                 <div class="tab-pane" id="announcements">
-                  <div id="announcementList" style="display: flex; flex-wrap: wrap;">
-
+                  <div class="box-body">
+                    <iframe height="100%" width="100%" frameborder="0" src="#" id="announcementContent"
+                      scrolling="no"></iframe>
                   </div>
                 </div>
                 <!-- /.tab-pane -->
