--- a/home.html
+++ b/home.html
@@ -455,6 +455,7 @@
 
   <!--Using SocketIO-->
   <script src="js/meetingroom/socketioMeetingRoom.js"></script>
+  <script src="js/meetingroom/socketioMessageHandler.js"></script>
 
   <script src="js/meetingroom/quickCall.js"></script>
 
