--- a/home.html
+++ b/home.html
@@ -456,6 +456,8 @@
   <!--Using SocketIO-->
   <script src="js/meetingroom/socketioMeetingRoom.js"></script>
   <script src="js/meetingroom/socketioMessageHandler.js"></script>
+  <script src="js/meetingroom/socketioP2P.js"></script>
+  <script src="js/meetingroom/socketioMediaStream.js"></script>
 
   <script src="js/meetingroom/quickCall.js"></script>
 
