--- a/mobileTesting.html
+++ b/mobileTesting.html
@@ -71,7 +71,7 @@
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>MT</b></span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg"><b>Mobile Testing</b></span>
+        <span class="logo-lg"><b>Mobile Testing Now</b></span>
       </a>
 
       <!-- Header Navbar: style can be found in header.less -->
