--- a/mobile/school.html
+++ b/mobile/school.html
@@ -54,145 +54,10 @@
 </head>
 
 <body>
-    <header class="main-header">
-        <!-- Logo -->
-        <a href="#" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><b>D</b></span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><b>Dynamiko</b></span>
-        </a>
-
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                <span class="sr-only">Toggle navigation</span>
-            </a>
-            <a href="#" class="selectedModule" style="float: left; padding: 10px 10px;">
-                <span style="color: aliceblue; font-size: 18px;"></span>
-            </a>
-            <!-- Navbar Right Menu -->
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
-                    <!-- Messages: style can be found in dropdown.less-->
-                    <li class="dropdown waiting-menu">
-                        <div id="waitingContainer" style="margin-top: 5px; display: none;">
-                            <i style="color: aliceblue;">Loading</i> <img src="images/ajax-loader.gif" />
-                        </div>
-                    </li>
-                    <li class="dropdown company company-menu" style="display: none;">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="useCompany">
-                            <span style="padding-right: 15px;"></span><i class="fa fa-bank"></i>
-                        </a>
-                        <ul class="dropdown-menu sidebar-menu tree" data-widget="tree"
-                            style="max-height:700px; overflow-y:auto;">
-                            <li><a href="#" class="leftMenuItem manageEmployee"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Employee</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageUserRoles"><i class="fa fa-dashboard"></i>
-                                    <span>Manage User
-                                        Roles</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageDepartment"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Department</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageTaxCategory"><i class="fa fa-dashboard"></i>
-                                    <span>Manage Tax
-                                        Category</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageAccountChart"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Account Chart</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageProduct"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Product</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageBenefit"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Benefit</span></a></li>
-                            <li><a href="#" class="leftMenuItem manageSupplier"><i class="fa fa-dashboard"></i>
-                                    <span>Manage
-                                        Supplier</span></a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown messages-menu" style="display: none;">
-                        <a href="#" class="pivotTable">
-                            <i class="fa fa-bar-chart"></i>
-                        </a>
-                    </li>
-                    <li class="dropdown messages-menu" style="display: none;">
-                        <a href="#" class="myReportViewer">
-                            <i class="fa fa-file-text"></i>
-                        </a>
-                    </li>
-                    <li class="dropdown messages-menu" style="display: none;">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="uploadDataFile">
-                            <i class="fa fa-upload"></i>
-                        </a>
-                    </li>
-                    <li class="dropdown messages-menu quickCall">
-                        <div class="input-group margin" style="width: 250px;  margin-top: 5px; margin-right: 15px;">
-                            <div class="input-group" style="width: 100%;">
-                                <input rowindex="0" type="text" class="form-control autocomplete" name="quickCallByCode"
-                                    placeholder="Type user here" module="QuickCallUI" autoname="quickCallByCode"
-                                    helptitle="quickCallByCode" style="border-radius: 10px 0px 0px 10px;">
-                                <span class="input-group-btn">
-                                    <button type="button" id="btnQuickCall" class="btn btn-info btn-flat"
-                                        style="border-radius: 0px 10px 10px 0px;">
-                                        <i class="fa fa-phone"></i><span style="padding-left: 5px;">Call</span>
-                                    </button>
-                                </span>
-                                </input>
-                                <input rowindex="0" id="quickCallCode"
-                                    class="form-control editRecord HiddenAutoComplete" name="quickCallByCode"
-                                    type="hidden" module="QuickCallUI" autonamefield="quickCallByCode" value="">
-                                <div class="autocomplete-items" rowindex="0" module="QuickCallUI"
-                                    autoname="quickCallByCode"></div>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="dropdown messages-menu myMeetingButtonGroup">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-users"></i><span style="padding-left: 5px;">Video Con</span>
-                        </a>
-                        <ul class="dropdown-menu sidebar-menu tree" data-widget="tree" id="myMeetings"
-                            style="max-height:700px; overflow-y:auto;">
-                        </ul>
-                    </li>
-                    <!-- User Account: style can be found in dropdown.less -->
-                    <li class="dropdown user user-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <!-- <img src="dist/img/user2-160x160.jpg" class="user-image profilePicture" alt="User Image"> -->
-                            Welcome <span class="hidden-xs profileName" style="font-weight: bold;">User</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <!-- <li class="user-header">
-                    <img src="dist/img/user2-160x160.jpg" class="img-circle profilePicture" alt="User Image">
-                    <p>
-                      <span class="profileName">User</span> - <span class="profileWork">User</span>
-                    </p>
-                  </li> -->
-                            <!-- Menu Body -->
-                            <!-- Menu Footer-->
-                            <li class="user-footer">
-                                <!-- <div class="pull-left">
-                      <a href="#" class="btn btn-default btn-flat">Profile</a>
-                    </div> -->
-                                <div class="text-center">
-                                    <a href="#" class="btn btn-default btn-flat btnProfile">Profile</a>
-                                    <a href="#" class="btn btn-default btn-flat btnSignOut">Sign out</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-
-        </nav>
-    </header>
     <div id="main" style="display: flex; flex-direction: column; margin: 10px;">
         <div class="box box-primary">
             <div class="box-body box-welcome">
-                <h3 class="text-center">Dynamiko Virtual School</h3>
+                <h3 class="text-center">My Virtual School</h3>
                 <p class="text-muted text-center">Please Log In</p>
             </div>
             <div class="box-body box-profile" style="display: none;">
@@ -200,12 +65,63 @@
             </div>
         </div>
 
-        <div class="box box-success my-module" style="display: none;">
+        <div class="box box-success my-module">
             <div class="box-header with-border">
                 <h3 class="box-title">My Modules</h3>
             </div>
             <div class="box-body">
                 <div style="display: flex; flex-wrap: wrap;" id="moduleList">
+                    <div class="small-box bg-aqua" style="flex: 1; margin: 10px;">
+                        <div class="inner">
+                            <h3>Math</h3>
+                            <p>Join<i class="fa fa-phone" style="margin-left: 10px; font-size: x-large;"></i></p>
+                        </div>
+                        <div class="icon">
+                            <i class="fa fa-shopping-cart"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">
+                            Activities <i class="fa fa-arrow-circle-right"></i>
+                        </a>
+                    </div>
+                    <div class="small-box bg-green" style="flex: 1; margin: 10px;">
+                        <div class="inner">
+                            <h3>53<sup style="font-size: 20px">%</sup></h3>
+
+                            <p>Bounce Rate</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">
+                            More info <i class="fa fa-arrow-circle-right"></i>
+                        </a>
+                    </div>
+                    <div class="small-box bg-yellow" style="flex: 1; margin: 10px;">
+                        <div class="inner">
+                            <h3>44</h3>
+
+                            <p>User Registrations</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">
+                            More info <i class="fa fa-arrow-circle-right"></i>
+                        </a>
+                    </div>
+                    <div class="small-box bg-red" style="flex: 1; margin: 10px;">
+                        <div class="inner">
+                            <h3>65</h3>
+
+                            <p>Unique Visitors</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-pie-graph"></i>
+                        </div>
+                        <a href="#" class="small-box-footer">
+                            More info <i class="fa fa-arrow-circle-right"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
