--- a/mobile/school.html
+++ b/mobile/school.html
@@ -69,11 +69,11 @@
             <div class="box box-primary">
                 <div class="box-body box-welcome">
                     <h3 class="text-center">My Virtual School</h3>
-                    <p class="text-muted text-center">Click to Log In</p>
+                    <p class="text-muted text-center"><a href="#" id="btnShowLogin">Click to Log In</a></p>
                 </div>
             </div>
         </div>
-        <div id="loginScreen">
+        <div id="loginScreen" style="display: none;">
             <div class="login-box-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
@@ -95,8 +95,8 @@
                         </div>
                         <!-- /.col -->
                         <div class="col-xs-4">
-                            <button class="btn btn-lg btn-primary btn-block" name="btnSubmit" id="btnSubmit"
-                                text="Login" value="Login" type="button">Login</button>
+                            <button class="btn btn-lg btn-primary btn-block" name="btnLogin" id="btnLogin" text="Login"
+                                value="Login" type="button">Login</button>
                         </div>
                         <!-- /.col -->
                     </div>
@@ -337,7 +337,7 @@
 
     <script>
         $(function () {
-            schoolMobile.loadData();
+            schoolMobile.updateDisplay();
         });
     </script>
 </body>
