--- a/mobile/school.html
+++ b/mobile/school.html
@@ -167,7 +167,7 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body no-padding">
-                    <ul class="timeline timeline-inverse">
+                    <ul class="timeline timeline-inverse ActivityList">
                         <!-- timeline time label -->
                         <li class="time-label">
                             <span class="bg-red">
@@ -273,7 +273,7 @@
                 </div>
                 <!-- /.box-header -->
                 <div class="box-body no-padding">
-                    <ul class="users-list clearfix">
+                    <ul class="users-list clearfix studentImageRoster">
                         <li>
                             <img src="dist/img/user1-128x128.jpg" alt="User Image">
                             <a class="users-list-name" href="#">Alexander Pierce</a>
