--- a/mobile/school.html
+++ b/mobile/school.html
@@ -76,13 +76,13 @@
 
                 <form class="form-signin" method="POST">
                     <div class="form-group has-feedback">
-                        <input class="form-control logInput" id="email" name="email" th:placeholder="Email"
-                            type="email" />
+                        <input class="form-control logInput" id="email" name="email" th:placeholder="Email" type="email"
+                            value="student1@test.com" />
                         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
                     </div>
                     <div class="form-group has-feedback">
                         <input class="form-control logInput" id="password" name="password" th:placeholder="Password"
-                            type="password" />
+                            type="password" value="password" />
                         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     </div>
                     <div class="row">
