--- a/mobile/school.html
+++ b/mobile/school.html
@@ -58,7 +58,13 @@
             <div class="box box-primary">
                 <div class="box-body box-profile">
                     <h3 class="profile-username text-center">Welcome <span id="myProfileName">Please login</span>!</h3>
-                    <p class="text-muted text-center">Show Profile</p>
+                    <div style="display: flex;">
+                        <div style="flex: 1; text-align: right; color: #3c8dbc;" class="btnShowProfile"><i
+                                class="fa fa-fw fa-user"></i>Profile</div>
+                        <div style="flex: 1; margin-left: 10px; color: #dd4b39;" class="btnLogout"><i
+                                class="fa fa-fw fa-sign-out"></i> Logout
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -126,7 +132,7 @@
                             <video id="activeVideo" style="width: 100%; height: 700px;" autoplay playsinline></video>
                         </div>
                         <div style="flex: 1;">
-                            <div style="display: flex; flex-direction: column; flex-wrap: wrap; overflow-y: auto; margin-top: 10px;"
+                            <div style="display: flex; flex-wrap: wrap; overflow-y: auto; margin-top: 10px;"
                                 class="videoBoxList"></div>
                         </div>
                     </div>
