--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
 <body class="hold-transition login-page">
     <div class="login-box">
         <div class="login-logo">
-            <a href="#"><b>My</b>dynamikó</a>
+            <a href="#">dyn<b>@</b>mikó</a>
         </div>
         <!-- /.login-logo -->
         <div class="login-box-body">
