--- a/mobile/schoolAccount.html
+++ b/mobile/schoolAccount.html
@@ -117,7 +117,7 @@
 
     <script>
         $(function () {
-            schoolMobile.loadDisplay();
+            schoolMobile.handleAccountDisplay();
         });
     </script>
 </body>
