--- a/mobile/schoolAccount.html
+++ b/mobile/schoolAccount.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div id="loginScreen">
+        <div id="loginScreen" style="display: none;">
             <div class="login-box-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
