--- a/mobile/schoolSchedules.html
+++ b/mobile/schoolSchedules.html
@@ -54,7 +54,7 @@
         <div id="pleaseLogin" style="display: none;">
             <div class="box box-primary">
                 <div class="box-body box-profile">
-                    <h3 class="profile-username text-center">Welcome <span>Please login in Account Tab -></span>!</h3>
+                    <h3 class="profile-username text-center">Welcome <span>Please login in Account Tab</span>!</h3>
                 </div>
             </div>
         </div>
