--- a/home.html
+++ b/home.html
@@ -421,7 +421,7 @@
   <script src="js/quick-searcher.js"></script>
   <script src="js/dynamiko-cache.js"></script>
   <script src="js/sockjs.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
     integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I=" crossorigin="anonymous"></script>
 
 
