--- a/mobile/content/DynamikoMobile/exploreContent.html
+++ b/mobile/content/DynamikoMobile/exploreContent.html
@@ -1,7 +1,8 @@
 <div class="user-block" style="margin: 5px;">
     <img class="img-circle img-bordered-sm" src="img/user1-128x128.jpg" alt="user image">
     <span class="username">
-        <a href="#" class="AndroidSchool">Virtual School</a>
+        <a href="https://dynamikosoft.com:7777/mobile/content/DynamikoMobile/installers/app-release.apk">Virtual
+            School</a>
     </span>
     <span class="description">Shared publicly - 7:30 PM today</span>
 </div>
