--- a/login.html
+++ b/login.html
@@ -116,7 +116,7 @@
         function login() {
             var vusername = $('#email').val();
             var vpassword = $('#password').val();
-            loginJS.login(vusername, vpassword, "home.html");
+            loginJS.login(vusername, vpassword);
         }
     </script>
 </body>
