--- a/faculty-home.html
+++ b/faculty-home.html
@@ -126,7 +126,7 @@
       </div>
     </footer>
   </div>
-  <script src="https://dynamikosoft.com:7777/js/initializer/school-hook.js"></script>
+  <script src="https://dynamikosoft.com/ui/js/initializer/school-hook.js"></script>
   <script>
     $(function () {
       studentHome.init();
