Init - Layout for Android

--- a/faculty-home.html
+++ b/faculty-home.html
@@ -126,7 +126,8 @@
       </div>
     </footer>
   </div>
-  <script src="https://dynamikosoft.com/ui/js/initializer/school-hook.js"></script>
+  <script src="js/initializer/school-hook.js"></script>
+  <link rel="stylesheet" href="css/school-hook.css">
   <script>
     $(function () {
       studentHome.init();
